--- a/helmfile.d/network.yaml
+++ b/helmfile.d/network.yaml
@@ -25,6 +25,49 @@ releases:
     namespace: kube-system
     chart: coredns/coredns
     installed: true
+    values:
+      - rbac:
+          create: true
+        service:
+          clusterIP: 10.43.0.10
+        # Enable after prometheus-operator installed
+        # prometheus:
+        #   service:
+        #     enabled: true
+        #     annotations:
+        #       prometheus.io/scrape: "true"
+        #       prometheus.io/port: "9153"
+        #   monitor:
+        #     enabled: true
+        servers:
+        - zones:
+          - zone: .
+          port: 53
+          plugins:
+          - name: errors
+          # Serves a /health endpoint on :8080, required for livenessProbe
+          - name: health
+            configBlock: |-
+              lameduck 5s
+          # Serves a /ready endpoint on :8181, required for readinessProbe
+          - name: ready
+          # Required to query kubernetes API for data
+          - name: kubernetes
+            parameters: k8s.home.lex.la in-addr.arpa ip6.arpa
+            configBlock: |-
+              pods insecure
+              fallthrough in-addr.arpa ip6.arpa
+              ttl 30
+          # Serves a /metrics endpoint on :9153, required for serviceMonitor
+          - name: prometheus
+            parameters: 0.0.0.0:9153
+          - name: forward
+            parameters: . /etc/resolv.conf
+          - name: cache
+            parameters: 30
+          - name: loop
+          - name: reload
+          - name: loadbalance
 
   # https://github.com/bugfest/tor-controller/tree/master/charts/tor-controller
   - name: tor-controller
@@ -35,18 +78,17 @@ releases:
   # https://github.com/metallb/metallb/tree/main/charts/metallb
   - name: metallb
     namespace: metallb-system
-    installed: false
+    installed: true
     chart: metallb/metallb
 
   # https://artifacthub.io/packages/helm/traefik/traefik
   #
   # Check this page before upgrade
   # https://doc.traefik.io/traefik/migration/v2/
-  #
   - name: traefik
     namespace: traefik-system
     chart: traefik/traefik
-    installed: false
+    installed: true
     values:
       - service:
           annotations:
@@ -62,8 +104,8 @@ releases:
           - "--entrypoints.websecure.http.tls.certresolver=prodssl"
         globalArguments:
           - "--global.checknewversion"
-        # persistence:
-        #   enabled: true
+        persistence:
+          enabled: true
         deployment:
           initContainers:
             # The "volume-permissions" init container is required if you run into permission issues.
