--- a/helmfile.d/network.yaml
+++ b/helmfile.d/network.yaml
@@ -15,7 +15,7 @@ releases:
   #
   # Pre-install:
   # Note: Flannel requires CNI plugins to be installed in /opt/cni/bin
-  # Check arch in the link below 
+  # Check arch in the link below
   #
   # mkdir -p /opt/cni/bin
   # curl -O -L https://github.com/containernetworking/plugins/releases/download/v1.2.0/cni-plugins-linux-arm64-v1.2.0.tgz
@@ -81,6 +81,7 @@ releases:
 
   # https://github.com/bugfest/tor-controller/tree/master/charts/tor-controller
   - name: tor-controller
+    version: 0.1.10
     namespace: tor-controller
     installed: true
     chart: bugfest/tor-controller
@@ -121,8 +122,13 @@ releases:
             # The "volume-permissions" init container is required if you run into permission issues.
             # Related issue: https://github.com/traefik/traefik/issues/6825
             - name: volume-permissions
-              image: busybox:1.31.1
-              command: ["sh", "-c", "chmod -Rv 600 /data/*"]
+              image: busybox:1.36.0
+              command:
+                [
+                  "sh",
+                  "-c",
+                  "touch /data/acme.json && chmod -Rv 600 /data/* && chown 65532:65532 /data/acme.json",
+                ]
               volumeMounts:
                 - name: data
                   mountPath: /data
