--- a/helmfile.d/csi.yaml
+++ b/helmfile.d/csi.yaml
@@ -1,6 +1,8 @@
 repositories:
   - name: longhorn
     url: https://charts.longhorn.io
+  - name: kubernetes-sigs
+    url: https://kubernetes-sigs.github.io/nfs-subdir-external-provisioner/
 
 # https://artifacthub.io/packages/helm/longhorn/longhorn
 releases:
@@ -16,3 +18,12 @@ releases:
             traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
         defaultSetting:
           defaultReplicaCount: 1
+
+  - name: nfs-subdir-external-provisioner
+    namespace: nfs-subdir-external-provisioner
+    installed: true
+    chart: kubernetes-sigs/nfs-subdir-external-provisioner
+    values:
+      - nfs:
+          server: "nas.home.lex.la"
+          path: "/nfs/k8s"
