--- a/helmfile.d/network.yaml
+++ b/helmfile.d/network.yaml
@@ -9,10 +9,6 @@ repositories:
     url: https://coredns.github.io/helm
 
 releases:
-  # Currently using forked flannel chart
-  # Waiting for PR
-  # https://github.com/flannel-io/flannel/pull/1741/
-  #
   # Pre-install:
   # Note: Flannel requires CNI plugins to be installed in /opt/cni/bin
   # Check arch in the link below
@@ -23,8 +19,7 @@ releases:
   # rm cni-plugins-linux-arm64-v1.2.0.tgz
   - name: flannel
     namespace: kube-flannel
-    # chart: "https://github.com/flannel-io/flannel/releases/download/v0.21.3/flannel.tgz"
-    chart: ../flannel
+    chart: "https://github.com/flannel-io/flannel/releases/download/v0.21.4/flannel.tgz"
     installed: true
     values:
       - podCidr: "10.42.0.0/16"
@@ -81,7 +76,6 @@ releases:
 
   # https://github.com/bugfest/tor-controller/tree/master/charts/tor-controller
   - name: tor-controller
-    version: 0.1.10
     namespace: tor-controller
     installed: true
     chart: bugfest/tor-controller
@@ -96,6 +90,9 @@ releases:
   #
   # Check this page before upgrade
   # https://doc.traefik.io/traefik/migration/v2/
+  # To avoid the CRD conflict, we need to install the chart with bare helm command.
+  # helm upgrade --install traefik traefik/traefik --namespace traefik-system --create-namespace
+  # And then apply this file
   - name: traefik
     namespace: traefik-system
     chart: traefik/traefik
