--- a/helmfile.d/network.yaml
+++ b/helmfile.d/network.yaml
@@ -7,20 +7,27 @@ repositories:
     url: https://bugfest.github.io/tor-controller
   - name: coredns
     url: https://coredns.github.io/helm
+  - name: flannel
+    url: https://flannel-io.github.io/flannel
 
 releases:
   # Pre-install:
-  # Note: Flannel requires CNI plugins to be installed in /opt/cni/bin
+  # Flannel requires CNI plugins to be installed in /opt/cni/bin
   # Check arch in the link below
   #
   # mkdir -p /opt/cni/bin
   # curl -O -L https://github.com/containernetworking/plugins/releases/download/v1.2.0/cni-plugins-linux-arm64-v1.2.0.tgz
   # tar -C /opt/cni/bin -xzf cni-plugins-linux-arm64-v1.2.0.tgz
   # rm cni-plugins-linux-arm64-v1.2.0.tgz
+  #
+  # Also you have to create a privileged namespace for flannel manually
+  # kubectl create ns kube-flannel
+  # kubectl label --overwrite ns kube-flannel pod-security.kubernetes.io/enforce=privileged
+  #
   - name: flannel
     namespace: kube-flannel
-    chart: "https://github.com/flannel-io/flannel/releases/download/v0.21.4/flannel.tgz"
     installed: true
+    chart: flannel/flannel
     values:
       - podCidr: "10.42.0.0/16"
         flannel:
