Update Helm chart versions and dependencies
Signed-off-by: Aleksey Sviridkin <f@lex.la>

--- a/helmfile.d/dashboard.yaml
+++ b/helmfile.d/dashboard.yaml
@@ -15,3 +15,8 @@ releases:
             - dashboard.k8s.home.lex.la
           annotations:
             traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+            cert-manager.io/cluster-issuer: "cloudflare-issuer"
+          tls:
+            - secretName: dashboard-k8s-home-lex-la-tls
+              hosts:
+                - dashboard.k8s.home.lex.la
