Add fileMatch for argocd in renovate.json
Signed-off-by: Aleksey Sviridkin <f@lex.la>

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,5 +1,7 @@
 {
-    "extends": [":pinDependencies"],
+    "extends": [
+        ":pinDependencies"
+    ],
     "major": {
         "stabilityDays": 3
     },
@@ -10,5 +12,10 @@
     "timezone": "Europe/Moscow",
     "helmfile": {
         "fileMatch": "(^|/)helmfile.d\/.*\\.yaml$"
+    },
+    "argocd": {
+        "fileMatch": [
+            "argocd/.+\\.yaml$"
+        ]
     }
 }
