Update chart names and repository URLs
Signed-off-by: Aleksey Sviridkin <f@lex.la>

--- a/argocd/cloudflared.yaml
+++ b/argocd/cloudflared.yaml
@@ -12,7 +12,7 @@ spec:
     path: ""
     repoURL: "https://lexfrei.github.io/charts"
     targetRevision: "0.4.1"
-    chart: cloudflared
+    chart: cloudflare-tunnel
     helm:
       values: |
         cloudflare:
