--- a/argocd/metrics-server.yaml
+++ b/argocd/metrics-server.yaml
@@ -10,7 +10,7 @@ spec:
     server: "https://kubernetes.default.svc"
   source:
     path: ""
-    repoURL: "https://lexfrei.github.io/charts"
+    repoURL: "https://kubernetes-sigs.github.io/metrics-server"
     targetRevision: "3.12.0"
     chart: metrics-server
     helm:
