--- a/argocd/tor-controller.yaml
+++ b/argocd/tor-controller.yaml
@@ -13,6 +13,9 @@ spec:
     repoURL: "https://bugfest.github.io/tor-controller"
     targetRevision: "0.1.15"
     chart: tor-controller
+    helm:
+      values: |
+        upgradeRollout: false
   sources: []
   project: default
   syncPolicy:
