--- a/.github/workflows/validate-yamls.yaml
+++ b/.github/workflows/validate-yamls.yaml
@@ -10,4 +10,4 @@ jobs:
         uses: actions/checkout@v4
 
       - name: json-yaml-validate
-        uses: GrantBirki/json-yaml-validate
+        uses: GrantBirki/json-yaml-validate@v2.6.1
