Add GitHub Actions configuration to renovate.json
Signed-off-by: Aleksey Sviridkin <f@lex.la>

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -17,5 +17,14 @@
         "fileMatch": [
             "argocd/.+\\.yaml$"
         ]
-    }
+    },
+    "github-actions": {
+        "fileMatch": [
+            "^\\.github/workflows/[^/]+\\.ya?ml$"
+        ],
+        "matchStrings": [
+            "uses: (?<depName>[\\w-]+/[\\w-]+)(?<currentDigest>@sha256:[a-f0-9]{64})?"
+        ]
+    },
+    "automerge": true
 }
