Update selfHeal setting to true in argocd.yaml, cert-manager.yaml, cloudflared.yaml, coredns.yaml, dashboard.yaml, me-site.yaml, metallb.yaml, metrics-server.yaml, nfd.yaml, tigera-operator.yaml, tor-controller.yaml, and traefik.yaml
Signed-off-by: Aleksey Sviridkin <f@lex.la>

--- a/argocd/tigera-operator.yaml
+++ b/argocd/tigera-operator.yaml
@@ -25,6 +25,6 @@ spec:
   syncPolicy:
     automated:
       prune: false
-      selfHeal: false
+      selfHeal: true
     syncOptions:
       - ServerSideApply=true
