--- a/argocd/metallb.yaml
+++ b/argocd/metallb.yaml
@@ -18,6 +18,6 @@ spec:
   syncPolicy:
     automated:
       prune: false
-      selfHeal: false
+      selfHeal: true
     syncOptions:
       - ServerSideApply=true
