Add container IP forwarding configuration
Signed-off-by: Aleksey Sviridkin <f@lex.la>

--- a/argocd/tigera-operator.yaml
+++ b/argocd/tigera-operator.yaml
@@ -20,6 +20,7 @@ spec:
             - cidr: "10.42.0.0/16"
               natOutgoing: true
               encapsulation: "VXLAN"
+          containerIPForwarding: "Enabled"
   sources: []
   project: default
   syncPolicy:
