--- a/values/tigera-operator.yaml
+++ b/values/tigera-operator.yaml
@@ -1,6 +1,7 @@
-calicoNetwork:
-  ipPools:
-    - cidr: "10.42.0.0/16"
-      natOutgoing: true
-      encapsulation: "VXLAN"
-  containerIPForwarding: "Enabled"
+installation:
+  calicoNetwork:
+    ipPools:
+      - cidr: "10.42.0.0/16"
+        natOutgoing: true
+        encapsulation: "VXLAN"
+    containerIPForwarding: "Enabled"
