Update natOutgoing value to "Enabled" in tigera-operator.yaml
Signed-off-by: Aleksey Sviridkin <f@lex.la>

--- a/values/tigera-operator.yaml
+++ b/values/tigera-operator.yaml
@@ -2,6 +2,6 @@ installation:
   calicoNetwork:
     ipPools:
       - cidr: "10.42.0.0/16"
-        natOutgoing: true
+        natOutgoing: "Enabled"
         encapsulation: "VXLAN"
     containerIPForwarding: "Enabled"
