--- a/argocd/tigera-operator.yaml
+++ b/argocd/tigera-operator.yaml
@@ -19,7 +19,7 @@ spec:
           calicoNetwork:
             ipPools:
               - cidr: "10.42.0.0/16"
-                natOutgoing: true
+                natOutgoing: "Enabled"
                 encapsulation: "VXLAN"
             containerIPForwarding: "Enabled"
   sources: []
