Update IP pool configuration in tigera-operator.yaml
Signed-off-by: Aleksey Sviridkin <f@lex.la>

--- a/argocd/tigera-operator.yaml
+++ b/argocd/tigera-operator.yaml
@@ -16,9 +16,12 @@ spec:
         installation:
           calicoNetwork:
             ipPools:
-              - cidr: "10.42.0.0/16"
-                natOutgoing: "Enabled"
-                encapsulation: "VXLAN"
+              - blockSize: 26
+                cidr: 10.42.0.0/16
+                disableBGPExport: false
+                encapsulation: VXLAN
+                natOutgoing: Enabled
+                nodeSelector: all()
             containerIPForwarding: "Enabled"
   project: default
   syncPolicy:
