Update Helm values to use valuesObject
Signed-off-by: Aleksei Sviridkin <aleksei.sviridkin@ringcentral.com>

--- a/argocd/cloudflared.yaml
+++ b/argocd/cloudflared.yaml
@@ -12,7 +12,7 @@ spec:
     targetRevision: "0.4.1"
     chart: cloudflare-tunnel
     helm:
-      values: |
+      valuesObject:
         cloudflare:
           secretName: tunnel-credentials
           tunnelName: k8s-expose
