--- a/argocd/argocd.yaml
+++ b/argocd/argocd.yaml
@@ -12,7 +12,7 @@ spec:
     targetRevision: "6.7.7"
     chart: argo-cd
     helm:
-      values: |
+      valuesObject:
         global:
           domain: argocd.k8s.home.lex.la
         configs:
