--- a/argocd/cert-manager.yaml
+++ b/argocd/cert-manager.yaml
@@ -12,7 +12,7 @@ spec:
     targetRevision: "v1.14.4"
     chart: cert-manager
     helm:
-      values: |
+      valuesObject:
         installCRDs: true
         podDnsConfig:
           nameservers:
