--- a/argocd/dashboard.yaml
+++ b/argocd/dashboard.yaml
@@ -12,7 +12,7 @@ spec:
     targetRevision: "7.1.3"
     chart: kubernetes-dashboard
     helm:
-      values: |
+      valuesObject:
         ingress:
           enabled: true
           hosts:
