--- a/argocd/metrics-server.yaml
+++ b/argocd/metrics-server.yaml
@@ -12,7 +12,7 @@ spec:
     targetRevision: "3.12.0"
     chart: metrics-server
     helm:
-      values: |
+      valuesObject:
         args:
           - --kubelet-insecure-tls
           - --kubelet-preferred-address-types=InternalIP
