Update vault.yaml with TLS configuration
Signed-off-by: Aleksey Sviridkin <f@lex.la>

--- a/argocd/vault.yaml
+++ b/argocd/vault.yaml
@@ -14,31 +14,27 @@ spec:
   helm:
     valuesObject:
       global:
-        domain: vault.k8s.home.lex.la
-      configs:
-        params:
-          server:
-            insecure: true
-        server:
-          ingress:
-            enabled: true
-            hosts:
-              - host: vault.k8s.home.lex.la
-                paths:
-                  - path: /
-                    pathType: Prefix
-                    backend:
-                      service:
-                        name: vault
-                        port:
-                          number: 8200
-            annotations:
-              traefik.ingress.kubernetes.io/router.entrypoints: websecure
-              cert-manager.io/cluster-issuer: cloudflare-issuer
-            tls:
-              - secretName: vault-k8s-home-lex-la-tls
-                hosts:
-                  - vault.k8s.home.lex.la
+        tlsDisable: false
+      server:
+        ingress:
+          enabled: true
+          hosts:
+            - host: vault.k8s.home.lex.la
+              paths:
+                - path: /
+                  pathType: Prefix
+                  backend:
+                    service:
+                      name: vault
+                      port:
+                        number: 8200
+          annotations:
+            traefik.ingress.kubernetes.io/router.entrypoints: websecure
+            cert-manager.io/cluster-issuer: cloudflare-issuer
+          tls:
+            - secretName: vault-k8s-home-lex-la-tls
+              hosts:
+                - vault.k8s.home.lex.la
   project: default
   syncPolicy:
     automated:
