--- a/argocd/vault.yaml
+++ b/argocd/vault.yaml
@@ -21,7 +21,7 @@ spec:
             hosts:
               - host: vault.k8s.home.lex.la
                 paths:
-                  - path: /
+                  - path: "/"
                     pathType: Prefix
                     backend:
                       service:
