--- a/argocd/traefik.yaml
+++ b/argocd/traefik.yaml
@@ -37,6 +37,9 @@ spec:
             matchRule: Host(`traefik.k8s.home.lex.la`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
             entryPoints:
               - websecure
+          tls:
+            certResolver: cloudflare-issuer
+            secretName: traefik-cert
         # Ugly hack to avoid the infinite progress on ingresses in argocd
         providers:
           kubernetesIngress:
