--- a/.github/workflows/validate-yamls.yaml
+++ b/.github/workflows/validate-yamls.yaml
@@ -3,10 +3,10 @@ name: Validate YAML
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
     branches:
-      - main
+      - master
 
 jobs:
   validate:
