Update timezone in renovate.json
Signed-off-by: Aleksey Sviridkin <f@lex.la>

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -10,7 +10,7 @@
         "before 2am"
     ],
     "dependencyDashboard": true,
-    "timezone": "Europe/Moscow",
+    "timezone": "Asia/Tbilisi",
     "helmfile": {
         "fileMatch": "(^|/)helmfile.d\/.*\\.yaml$"
     },
