--- a/argocd/traefik.yaml
+++ b/argocd/traefik.yaml
@@ -29,15 +29,15 @@ spec:
               port: websecure
           tunnel:
             port: 8080
-            expose: true
             exposedPort: 8080
+            expose:
+              default: true
         ingressRoute:
           dashboard:
             enabled: true
             matchRule: Host(`traefik.k8s.home.lex.la`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
             entryPoints:
               - websecure
-        # Ugly hack to avoid the infinite progress on ingresses in argocd
         providers:
           kubernetesIngress:
             publishedService:
