--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,7 +1,8 @@
 {
     "extends": [
         ":pinVersions",
-        ":pinDependencies"
+        ":pinDependencies",
+        ":semanticCommits"
     ],
     "major": {
         "stabilityDays": 3
