Add syncPolicy configuration to argocd/meta.yaml
Signed-off-by: Aleksey Sviridkin <f@lex.la>

--- a/argocd/meta.yaml
+++ b/argocd/meta.yaml
@@ -12,3 +12,7 @@ spec:
     path: argocd
     repoURL: https://github.com/lexfrei/k8s.git
     targetRevision: HEAD
+  syncPolicy:
+    automated:
+      selfHeal: true
+      prune: true
